<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:weightSum="2"
    tools:context=".EmailLogInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo_main_transp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_logIn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:minEms="6"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <TextView
            android:id="@+id/tv_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:clickable="true"
            android:text="@string/forgot_password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/botton_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded_grey_300"
            android:text="@string/login"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/sign_up"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_signUp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/et_emailSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter Email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <EditText
            android:id="@+id/et_passwordSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorSecondary"
            android:hint="Enter Password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:minEms="6"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="@dimen/botton_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded_grey_300"
            android:text="@string/sign_up"
            android:textAllCaps="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already a user? "
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/tv_logIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Log In"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>